Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-72925

Calendar Widgets use qtvirtualkeyboard Input year,click qtvirtualkeyboard ,Program crashes

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • 5.12.2, 5.14.0 Alpha
    • 5.12.0
    • Virtual Keyboard
    • None
    • Ubuntu 18.10 and Embedded Qt
    • Linux/X11
    • 7faec58d5cccf7e7a5f92116f70cc504821711af (qt/qtbase/5.12)

      "Calendar Widgets" Edit Year ,"Date/Time Edit" and "Date Edit" set "calendar popup" ture,Edit Year,click virtualkeyboard Program crashes。

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            mitch_curtis Mitch Curtis
            ningshen xiaoningtian
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes